force-app/main/default/objects/Professor_Student_Course_Preference__c/Professor_Student_Course_Preference__c.object-meta.xml
<CustomObject>
    <label>Professor / Student Course Preference</label>
    <nameField>
        <label>Professor/Student Course Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professor / Student Course Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>