force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Professor_Student_Course_prefernces1</relationshipName>
    <type>Lookup</type>
</CustomField>