force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <formula>Course_Offering__r.Course_ID__c</formula>
    <label>Course ID</label>
    <type>Text</type>
</CustomField>