force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipName>Professor_Student_Course_prefernces</relationshipName>
    <type>Lookup</type>
</CustomField>