force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Is_Cource_Connection_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Cource_Connection_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cource Connection Created</label>
    <type>Checkbox</type>
</CustomField>