force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Parent_Course__c.field-meta.xml
<CustomField>
    <fullName>Parent_Course__c</fullName>
    <formula>Course_Offering__r.Parent_Course_Offering__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Course</label>
    <type>Text</type>
</CustomField>