force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <label>Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Preference - 1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Preference - 2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Preference - 3</label>
            </value>
            <value>
                <fullName>Preference - 4</fullName>
                <isActive>false</isActive>
                <label>Preference - 4</label>
            </value>
            <value>
                <fullName>Preference - 5</fullName>
                <isActive>false</isActive>
                <label>Preference - 5</label>
            </value>
            <value>
                <fullName>Preference - 6</fullName>
                <isActive>false</isActive>
                <label>Preference - 6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>