force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Preference_No__c.field-meta.xml
<CustomField>
    <fullName>Preference_No__c</fullName>
    <formula>VALUE(RIGHT(text(Preference__c) , 1))</formula>
    <label>Preference No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>