force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Professor__c.field-meta.xml
<CustomField>
    <fullName>Professor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Professor_Student_Course_prefernces</relationshipName>
    <type>Lookup</type>
</CustomField>