force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Professor_Preference__c.field-meta.xml
<CustomField>
    <fullName>Professor_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professor Preference</label>
    <type>Checkbox</type>
</CustomField>