force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Professor_Student_Course_Preference_ID__c.field-meta.xml
<CustomField>
    <fullName>Professor_Student_Course_Preference_ID__c</fullName>
    <displayFormat>PSC ID-{0000}</displayFormat>
    <label>Professor / Student Course Preference ID</label>
    <type>AutoNumber</type>
</CustomField>