force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semester</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Professor / Student Course Preferences</relationshipLabel>
    <relationshipName>Professor_Student_Course_prefernces</relationshipName>
    <type>Lookup</type>
</CustomField>