force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Semester_Active__c.field-meta.xml
<CustomField>
    <fullName>Semester_Active__c</fullName>
    <formula>Semester__r.Active__c</formula>
    <label>Semester Active</label>
    <type>Checkbox</type>
</CustomField>