force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/SRN__c.field-meta.xml
<CustomField>
    <fullName>SRN__c</fullName>
    <formula>Contact__r.SRN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SRN</label>
    <type>Text</type>
</CustomField>