force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Student_Preference__c.field-meta.xml
<CustomField>
    <fullName>Student_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student Preference</label>
    <type>Checkbox</type>
</CustomField>