force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Term_Number__c.field-meta.xml
<CustomField>
    <fullName>Term_Number__c</fullName>
    <formula>Semester__r.Term_Number__c</formula>
    <label>Term Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>