force-app/main/default/objects/Professor_Student_Course_Preference__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <formula>Course_Offering__r.hed__Course__c &amp;&apos;-&apos;&amp;Professor__c&amp;&apos;-&apos;&amp;Text(Preference__c)</formula>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>